--- a/Capstone/src/index.html
+++ b/Capstone/src/index.html
@@ -11,5 +11,6 @@
 </head>
 <body class="mat-typography">
   <app-root></app-root>
+  <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 </body>
 </html>
